--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "react-redux": "^7.2.4",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-share": "^4.4.0",
     "react-simple-maps": "^2.3.0",
     "react-slick": "^0.28.1",
