--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "axios-mock-adapter": "^1.19.0",
     "clsx": "^1.1.1",
     "connected-react-router": "^6.9.1",
-    "craco-less": "^1.18.0",
+    "craco-less-fix": "^1.21.1",
     "fetch-jsonp": "^1.1.3",
     "firebase": "^8.8.0",
     "gsap": "^3.7.1",
