--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "eslint-plugin-react": "^7.24.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.1",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
