--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Crema",
-  "name": "Crema - Ant Design Admin Template",
+  "name": "Tween CMS",
   "icons": [
     {
       "src": "favicon.ico",
